<resources>
    <string name="app_name">AndroidPhotos27</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="rename">Rename</string>
    <string name="title_activity_opened_album">Album Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="moveToAlbum">Move to Album</string>
    <string name="display">Display</string>
    <string name="title_activity_search">Search</string>
    <string name="orSearch">Location OR Person</string>
    <string name="locationSearch">Search by Location</string>
    <string name="personSearch">Search by Person</string>
    <string name="andSearch">Location AND Person</string>
    <string name="locationHint">Location</string>
    <string name="personHint">Person</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="prevPhoto">Previous</string>
    <string name="nextPhoto">Next</string>
    <string name="addTag">Add Tag</string>
    <string name="deleteTag">Delete Tag</string>
    <string name="tagsLabel">Tags</string>
    <string name="addLocation">Add Location</string>
    <string name="addPerson">Add Person</string>
</resources>