<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/orSearch"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginTop="416dp"
        android:text="@string/orSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/searchThumbnails"
        android:layout_width="375dp"
        android:layout_height="288dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintBottom_toTopOf="@+id/personText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/locationSearch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/locationSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/personSearch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/personSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:hint="@string/locationHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:ems="10"
        android:hint="@string/personHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/andSearch"
        android:layout_width="186dp"
        android:layout_height="55dp"
        android:layout_marginTop="416dp"
        android:text="@string/andSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>